--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>TOBEPRO</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>TOBEPRO Maven Webapp</name>
+	<name>TOBEPRO Maven Webappsss</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
