--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,5 +27,5 @@ security.ldap.cert.vendor.userDn=
 security.ldap.cert.heb.password=
 security.ldap.cert.vendor.password=
 
-#Floral settings
+#Floral settings test
 defaultDOWDAte=EEE MM/dd/yy hh:mm aa
